[gd_scene load_steps=21 format=3 uid="uid://b3ctt3wihq5bn"]

[ext_resource type="Texture2D" uid="uid://cqxo8nc1jm228" path="res://sprites/physics_tilemap.png" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://cjdw3l3t62jsr" path="res://scripts/main.gd" id="1_tipki"]
[ext_resource type="Script" uid="uid://fs1bmhibbv83" path="res://scenes/update_bar.gd" id="4_85g3d"]
[ext_resource type="Script" uid="uid://cysiqoyo31qpx" path="res://scripts/entity.gd" id="4_tbgi4"]
[ext_resource type="Gradient" uid="uid://dym3ctpbsypej" path="res://scenes/grad.tres" id="4_ya4ey"]
[ext_resource type="Script" uid="uid://djbpka8jytp0h" path="res://scripts/udp_manager.gd" id="6_o6xl0"]
[ext_resource type="PackedScene" uid="uid://d25afrem7cmyo" path="res://scenes/nexus.tscn" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://cxckoe56ng5km" path="res://scripts/grid_manager.gd" id="7_tipki"]
[ext_resource type="Script" uid="uid://ciqfa35bndgy" path="res://scripts/map_processing.gd" id="10_ya4ey"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1bvp3"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mycd"]
texture = ExtResource("1_jyhfs")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_1bvp3")

[sub_resource type="TileSet" id="TileSet_272bh"]
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_7mycd")

[sub_resource type="LabelSettings" id="LabelSettings_tipki"]
font_size = 50
font_color = Color(0, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_85g3d"]
font_size = 50
font_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.32, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
bg_color = Color(0.027, 0, 0.27, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0, 0.5, 1, 1)

[sub_resource type="Resource" id="Resource_tipki"]
script = ExtResource("4_tbgi4")
health = 300
damage = 30
team = 1
role = 1
attack = 1
speed = 0
metadata/_custom_type_script = "uid://cysiqoyo31qpx"

[sub_resource type="Resource" id="Resource_85g3d"]
script = ExtResource("4_tbgi4")
health = 300
damage = 30
team = 0
role = 1
attack = 1
speed = 0
metadata/_custom_type_script = "uid://cysiqoyo31qpx"

[node name="MainScene" type="Node2D"]
script = ExtResource("1_tipki")
gradient = ExtResource("4_ya4ey")

[node name="LogicMap" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_272bh")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="Map" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -4096
texture_filter = 3
scale = Vector2(0.19, 0.19)

[node name="CanvasLayer" type="CanvasLayer" parent="Map"]
script = ExtResource("4_85g3d")

[node name="BlueInfo" type="Label" parent="Map/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 58.0
offset_top = -96.0
offset_right = 129.0
offset_bottom = 45.0
grow_vertical = 0
rotation = 1.57079
size_flags_horizontal = 0
size_flags_vertical = 8
text = "0
"
label_settings = SubResource("LabelSettings_tipki")

[node name="ColorRect" type="ColorRect" parent="Map/CanvasLayer/BlueInfo"]
z_index = -5
layout_mode = 0
offset_left = 94.9999
offset_top = 13.0006
offset_right = 135.0
offset_bottom = 61.0006
scale = Vector2(-2.4231, 0.942798)

[node name="PinkInfo" type="Label" parent="Map/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_top = 91.0
offset_right = 127.0
offset_bottom = 160.0
grow_horizontal = 0
rotation = -1.57079
text = "0            "
label_settings = SubResource("LabelSettings_85g3d")

[node name="ColorRect" type="ColorRect" parent="Map/CanvasLayer/PinkInfo"]
z_index = -5
layout_mode = 0
offset_left = 91.0001
offset_top = 12.9994
offset_right = 131.0
offset_bottom = 60.9994
scale = Vector2(-2.4231, 0.942798)

[node name="PinkHealthBar" type="ProgressBar" parent="Map/CanvasLayer"]
unique_name_in_owner = true
offset_left = 595.0
offset_right = 692.0
offset_bottom = 12.0
rotation = 1.57079
theme_override_styles/background = SubResource("StyleBoxFlat_tipki")
theme_override_styles/fill = SubResource("StyleBoxFlat_85g3d")
show_percentage = false

[node name="BlueHealthBar" type="ProgressBar" parent="Map/CanvasLayer"]
unique_name_in_owner = true
offset_left = 44.0
offset_top = 480.0
offset_right = 142.0
offset_bottom = 493.0
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxFlat_choun")
theme_override_styles/fill = SubResource("StyleBoxFlat_ya4ey")
show_percentage = false

[node name="BlueNexus" parent="." instance=ExtResource("7_o6xl0")]
position = Vector2(-69, 132)
scale = Vector2(1.5, 1.5)
entity_info = SubResource("Resource_tipki")

[node name="RedNexus" parent="." instance=ExtResource("7_o6xl0")]
position = Vector2(-14, 18)
scale = Vector2(1.5, 1.5)
entity_info = SubResource("Resource_85g3d")

[node name="Processing" type="Node" parent="."]

[node name="UDP" type="Node" parent="Processing"]
script = ExtResource("6_o6xl0")

[node name="TilesetGrid" type="Node" parent="Processing" node_paths=PackedStringArray("udp_manager")]
script = ExtResource("7_tipki")
udp_manager = NodePath("../UDP")

[node name="MapProcessing" type="Node" parent="Processing" node_paths=PackedStringArray("udp_manager")]
script = ExtResource("10_ya4ey")
udp_manager = NodePath("../UDP")

[node name="Timer" type="Timer" parent="Processing"]
wait_time = 0.5
autostart = true

[connection signal="frame_received" from="Processing/UDP" to="Processing/TilesetGrid" method="_on_udp_frame_received"]
[connection signal="frame_received" from="Processing/UDP" to="Processing/MapProcessing" method="_on_udp_frame_received"]
[connection signal="timeout" from="Processing/Timer" to="Processing/TilesetGrid" method="_on_timer_timeout"]
